<resources>
    <string name="app_name">ExercicioDeSomar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="primeiro">Digite o primeiro número</string>
    <string name="segundo">Digite o segundo número</string>
    <string name="calcular">Somar</string>
    <string name="resultado">Resultado</string>
    <string name="key">key</string>
    <string name="ok">ok</string>
    <string name="cancelar">cancelar</string>
</resources>
