<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.cesar.exerciciosomarcesar.SomarActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/primeiro"
        android:layout_gravity="center"
        android:textColor="@color/colorAccent"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/edit_value1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:inputType="numberSigned"
        android:layout_marginTop="10dp"
        android:padding="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/segundo"
        android:textColor="@color/colorAccent"
        android:layout_gravity="center"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/edit_value2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:inputType="numberSigned"
        android:layout_marginTop="10dp"
        android:padding="10dp"/>

    <Button
        android:id="@+id/button_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/colorLight"
        android:layout_gravity="bottom"
        android:layout_marginBottom="20dp"
        android:text="@string/ok"/>

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:layout_gravity="bottom"
        android:textColor="@color/colorLight"
        android:text="@string/cancelar"/>

</LinearLayout>
